layout issues fixed.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1001,7 +1001,7 @@ h2 {
 
 @media (min-width: 768px) {
   .site-blocks-cover .site-block-cover-content {
-    margin-top: 40%;
+    margin-top: 30%;
   }
 }
 
