--- a/resources/sass/_site-blocks.scss
+++ b/resources/sass/_site-blocks.scss
@@ -217,7 +217,7 @@ h2 {
         }
 
         @include media-breakpoint-up(md) {
-            margin-top: 40%;
+            margin-top: 30%;
         }
     }
 
